--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/moment": "^2.13.0",
     "antd": "^2.13.10",
     "axios": "^0.17.1",
     "d3": "^4.12.2",
     "dagre": "^0.7.4",
+    "moment": "^2.20.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
