--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
     "react-scripts-ts": "2.8.0",
+    "react-transition-group": "^2.2.1",
     "redux": "^3.7.2"
   },
   "scripts": {
