--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-transition-group": "^2.0.7",
     "antd": "^2.13.10",
     "axios": "^0.17.1",
     "d3": "^4.12.2",
