change relative import to absolute import

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "build/dist",
+    "baseUrl": "./src",
     "module": "esnext",
     "target": "es5",
     "lib": ["es6", "dom", "webworker", "scripthost"],
