--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "vis_edit",
   "version": "0.1.0",
   "private": true,
-  "_homepage" : "https://wangqianwen0418.github.io/projects/DNNGenealogy/",
+  "_homepage": "https://wangqianwen0418.github.io/projects/DNNGenealogy/",
   "dependencies": {
     "@types/react-transition-group": "^2.0.7",
     "antd": "^2.13.10",
     "axios": "^0.17.1",
     "d3": "^4.12.2",
+    "echarts": "^4.1.0",
+    "echarts-for-react": "^2.0.13",
     "moment": "^2.20.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
