--- a/package.json
+++ b/package.json
@@ -4,37 +4,38 @@
   "private": true,
   "_homepage": "https://wangqianwen0418.github.io/projects/DNNGenealogy/",
   "dependencies": {
-    "@types/react-transition-group": "^2.0.7",
-    "antd": "^2.13.10",
-    "axios": "^0.17.1",
-    "d3": "^4.12.2",
-    "echarts": "^4.1.0",
-    "echarts-for-react": "^2.0.13",
-    "moment": "^2.20.1",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-redux": "^5.0.6",
+    "@types/react-transition-group": "2.0.7",
+    "antd": "^2.13.13",
+    "axios": "0.17.1",
+    "d3": "4.12.2",
+    "echarts": "4.1.0",
+    "echarts-for-react": "2.0.13",
+    "graphlib": "1.0.5",
+    "lodash": "3.10.0",
+    "moment": "2.20.1",
+    "react": "16.1.1",
+    "react-dom": "16.1.1",
+    "react-redux": "5.0.6",
     "react-scripts-ts": "2.8.0",
-    "react-transition-group": "^2.2.1",
-    "redux": "^3.7.2",
-    "graphlib": "^1.0.5"
+    "react-transition-group": "2.2.1",
+    "redux": "3.7.2"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
+    "start": "PORT=7778 react-scripts-ts start",
     "build": "react-scripts-ts build ",
     "test": "react-scripts-ts test --env=jsdom --setupTestFrameworkScriptFile=raf/polyfill",
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/antd": "^1.0.0",
-    "@types/d3": "^4.12.0",
-    "@types/react-redux": "^5.0.13",
-    "@types/enzyme-adapter-react-16": "^1.0.1",
-    "@types/jest": "^21.1.6",
-    "@types/node": "^8.0.53",
-    "@types/react": "^16.0.23",
-    "@types/react-dom": "^16.0.3",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.0"
+    "@types/antd": "1.0.0",
+    "@types/d3": "4.12.0",
+    "@types/react-redux": "5.0.13",
+    "@types/enzyme-adapter-react-16": "1.0.1",
+    "@types/jest": "21.1.6",
+    "@types/node": "8.0.53",
+    "@types/react": "16.0.23",
+    "@types/react-dom": "16.0.3",
+    "enzyme": "3.2.0",
+    "enzyme-adapter-react-16": "1.1.0"
   }
 }
